Cleaned up Factcheck list page in Admin Portal

--- a/src/main/webapp/app/entities/factcheck/fact-check/fact-check.component.html
+++ b/src/main/webapp/app/entities/factcheck/fact-check/fact-check.component.html
@@ -29,14 +29,14 @@
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="title"><span jhiTranslate="gatewayApp.factcheckFactCheck.title">Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.factcheckFactCheck.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.factcheckFactCheck.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="introduction"><span jhiTranslate="gatewayApp.factcheckFactCheck.introduction">Introduction</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="summary"><span jhiTranslate="gatewayApp.factcheckFactCheck.summary">Summary</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="summary"><span jhiTranslate="gatewayApp.factcheckFactCheck.summary">Summary</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th jhiSortBy="excerpt"><span jhiTranslate="gatewayApp.factcheckFactCheck.excerpt">Excerpt</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="publishedDate"><span jhiTranslate="gatewayApp.factcheckFactCheck.publishedDate">Published Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="publishedDateGMT"><span jhiTranslate="gatewayApp.factcheckFactCheck.publishedDateGMT">Published Date GMT</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <!--<th jhiSortBy="publishedDateGMT"><span jhiTranslate="gatewayApp.factcheckFactCheck.publishedDateGMT">Published Date GMT</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.factcheckFactCheck.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="lastUpdatedDateGMT"><span jhiTranslate="gatewayApp.factcheckFactCheck.lastUpdatedDateGMT">Last Updated Date GMT</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="featured"><span jhiTranslate="gatewayApp.factcheckFactCheck.featured">Featured</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -45,20 +45,20 @@
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.factcheckFactCheck.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="password"><span jhiTranslate="gatewayApp.factcheckFactCheck.password">Password</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="featuredMedia"><span jhiTranslate="gatewayApp.factcheckFactCheck.featuredMedia">Featured Media</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="subTitle"><span jhiTranslate="gatewayApp.factcheckFactCheck.subTitle">Sub Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="subTitle"><span jhiTranslate="gatewayApp.factcheckFactCheck.subTitle">Sub Title</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let factCheck of factChecks ;trackBy: trackId">
-                <td><a [routerLink]="['/fact-check', factCheck.id, 'view' ]">{{factCheck.id}}</a></td>
+                <!--<td><a [routerLink]="['/fact-check', factCheck.id, 'view' ]">{{factCheck.id}}</a></td>-->
                 <td>{{factCheck.title}}</td>
-                <td>{{factCheck.clientId}}</td>
+                <!--<td>{{factCheck.clientId}}</td>
                 <td>{{factCheck.introduction}}</td>
-                <td>{{factCheck.summary}}</td>
+                <td>{{factCheck.summary}}</td>-->
                 <td>{{factCheck.excerpt}}</td>
                 <td>{{factCheck.publishedDate | date:'medium'}}</td>
-                <td>{{factCheck.publishedDateGMT | date:'medium'}}</td>
+                <!--<td>{{factCheck.publishedDateGMT | date:'medium'}}</td>
                 <td>{{factCheck.lastUpdatedDate | date:'medium'}}</td>
                 <td>{{factCheck.lastUpdatedDateGMT | date:'medium'}}</td>
                 <td>{{factCheck.featured}}</td>
@@ -67,7 +67,7 @@
                 <td>{{factCheck.slug}}</td>
                 <td>{{factCheck.password}}</td>
                 <td>{{factCheck.featuredMedia}}</td>
-                <td>{{factCheck.subTitle}}</td>
+                <td>{{factCheck.subTitle}}</td>-->
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
