--- a/src/main/webapp/app/entities/core/category/category.component.html
+++ b/src/main/webapp/app/entities/core/category/category.component.html
@@ -36,6 +36,7 @@
             <th jhiSortBy="parent"><span jhiTranslate="gatewayApp.coreCategory.parent">Parent</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.coreCategory.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreCategory.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreCategory.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -48,6 +49,7 @@
                 <td>{{category.parent}}</td>
                 <td>{{category.clientId}}</td>
                 <td>{{category.createdDate | date:'medium'}}</td>
+                <td>{{category.lastUpdatedDate | date:'medium'}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
