--- a/src/main/webapp/app/entities/core/format/format-detail.component.html
+++ b/src/main/webapp/app/entities/core/format/format-detail.component.html
@@ -29,6 +29,10 @@
                 <dd>
                     <span>{{format.createdDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreFormat.lastUpdatedDate">Last Updated Date</span></dt>
+                <dd>
+                    <span>{{format.lastUpdatedDate}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
