--- a/src/main/webapp/app/entities/core/format/format.component.html
+++ b/src/main/webapp/app/entities/core/format/format.component.html
@@ -36,6 +36,7 @@
             <th jhiSortBy="description"><span jhiTranslate="gatewayApp.coreFormat.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreFormat.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreFormat.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreFormat.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -48,6 +49,7 @@
                 <td>{{format.description}}</td>
                 <td>{{format.slug}}</td>
                 <td>{{format.createdDate | date:'medium'}}</td>
+                <td>{{format.lastUpdatedDate | date:'medium'}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
