--- a/src/main/webapp/app/entities/core/status/status.component.html
+++ b/src/main/webapp/app/entities/core/status/status.component.html
@@ -35,6 +35,7 @@
             <th jhiSortBy="isDefault"><span jhiTranslate="gatewayApp.coreStatus.isDefault">Is Default</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.coreStatus.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.coreStatus.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.coreStatus.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th></th>
             </tr>
             </thead>
@@ -46,6 +47,7 @@
                 <td>{{status.isDefault}}</td>
                 <td>{{status.slug}}</td>
                 <td>{{status.createdDate | date:'medium'}}</td>
+                <td>{{status.lastUpdatedDate | date:'medium'}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
