--- a/src/main/webapp/app/entities/core/role/role-detail.component.html
+++ b/src/main/webapp/app/entities/core/role/role-detail.component.html
@@ -25,6 +25,10 @@
                 <dd>
                     <span>{{role.createdDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.coreRole.lastUpdatedDate">Last Updated Date</span></dt>
+                <dd>
+                    <span>{{role.lastUpdatedDate}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
