--- a/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/rating/rating-detail.component.html
@@ -33,6 +33,10 @@
                 <dd>
                     <span>{{rating.createdDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.factcheckRating.lastUpdatedDate">Last Updated Date</span></dt>
+                <dd>
+                    <span>{{rating.lastUpdatedDate}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
