--- a/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/claim-detail.component.html
@@ -49,6 +49,10 @@
                 <dd>
                     <span>{{claim.createdDate}}</span>
                 </dd>
+                <dt><span jhiTranslate="gatewayApp.factcheckClaim.lastUpdatedDate">Last Updated Date</span></dt>
+                <dd>
+                    <span>{{claim.lastUpdatedDate}}</span>
+                </dd>
                 <dt><span jhiTranslate="gatewayApp.factcheckClaim.rating">Rating</span></dt>
                 <dd>
                     <div *ngIf="claim.ratingId">
