--- a/src/main/webapp/app/entities/core/media/media-update.component.html
+++ b/src/main/webapp/app/entities/core/media/media-update.component.html
@@ -12,7 +12,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="media.name" required/>
+                        [(ngModel)]="media.name" (change)="bindSlug($event)" required/>
                     <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
@@ -100,7 +100,7 @@
                         </small>
                     </div>
                 </div>
-                <div class="form-group">
+               <!-- <div class="form-group">
                     <label class="form-control-label" jhiTranslate="gatewayApp.coreMedia.lastUpdatedDate" for="field_lastUpdatedDate">Last Updated Date</label>
                     <div class="d-flex">
                         <input id="field_lastUpdatedDate" type="datetime-local" class="form-control" name="lastUpdatedDate" [(ngModel)]="lastUpdatedDate"
@@ -155,7 +155,7 @@
                             This field should be a date and time.
                         </small>
                     </div>
-                </div>
+                </div>-->
 
             </div>
             <div>
